prograsion basica planteada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <title>PortfolioJaimeCasado</title>
   </head>
   <body>
-    <h1>Jaime Casado</h1>
+    <div class="container">
+      <div class="row" id = "home">
+
+      </div>
+      <div class="row" id = "navbar">
+
+      </div>
+      <div class="row" id = "about">
+
+      </div>
+      <div class="row" id = "skills">
+
+      </div>
+      <div class="row" id = "portfolio">
+
+      </div>
+      <div class="row" id = "contact">
+
+      </div>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
