--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <title>PortfolioJaimeCasado</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm navbar-light navbar-center">
+  <nav class="navbar navbar-expand-sm navbar-light navbar-center" id ="navbar">
     <div class="container">
       <a href="#" class="navbar-brand">Ops</a>
 
@@ -20,18 +20,19 @@
       </button>
       <div class=" collapse navbar-collapse" id="nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Apart 1</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Apart 2</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Apart 3</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Apart 4</a></li>
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
+          <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact me</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="row" id = "home">
-      <h1 class="col-12" id="name">Jaime Casado</h1>
-      <h2 class="col-12" id="profile">Software Development</h2>
+  <div class="container-fluid" id="contenido">
+    <div class="row justify-content-center align-items-center" id = "home">
+      <h1 class="col-12 text-center" id="name">Jaime Casado</h1>
+      <h2 class="col-12 text-center" id="profile">Software Development</h2>
     </div>
     <div class="row" id = "about">
 
