Seccion home terminada y seccion about  iniciada

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>PortfolioJaimeCasado</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm navbar-light navbar-center" id ="navbar">
+  <nav class="navbar navbar-expand-sm navbar-dark navbar-center" id ="navbar">
     <div class="container">
-      <a href="#" class="navbar-brand">Ops</a>
+      <a href="#" class="navbar-brand">Jaime Casado</a>
 
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#nav">
         <span class="navbar-toggler-icon"></span>
@@ -22,24 +22,35 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About me</a></li>
-          <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact me</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="container-fluid" id="contenido">
+  <div class="container" id="contenido">
     <div class="row justify-content-center align-items-center" id = "home">
-      <h1 class="col-12 text-center" id="name">Jaime Casado</h1>
-      <h2 class="col-12 text-center" id="profile">Software Development</h2>
+      <div class="col-12 d-flex flex-column align-items-center">
+        <h1 class=" text-center" id="name">Jaime Casado</h1>
+        <h2 class=" text-center" id="profile">Software Development</h2>
+      </div>
+
     </div>
     <div class="row" id = "about">
+      <div class="col-12 d-flex flex-column align-items-center">
+        <h4 class="text-center titulo1" >Sobre mi</h4>
+        <p class="text-center">Desarrollador de aplicaciones multiplataforma en formación, con conocimientos tanto FrontEnd como BackEnd.<br> Experiencia en desarrollo de videojuegos 2D y 3D, aplicaciones de escritorio, navegador y dispositivos moviles. <br>A la hora de trabajara siempre busco un buen equilibrio y una buena usabilidad, para lograr así un resultado de calidad.</p>
+      </div>
+      <div class="col-12 d-flex justify-content-center  align-items-center">
+        <div class="row justify-content-center  align-items-center">
+          <h4 class="text-center titulo1">Skills</h4>
+          <div class="col-12">
 
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="row" id = "skills">
 
-    </div>
     <div class="row" id = "portfolio">
 
     </div>
