Añadida progress bar

--- a/index.html
+++ b/index.html
@@ -39,14 +39,20 @@
     <div class="row" id = "about">
       <div class="col-12 d-flex flex-column align-items-center">
         <h4 class="text-center titulo1" >Sobre mi</h4>
-        <p class="text-center">Desarrollador de aplicaciones multiplataforma en formación, con conocimientos tanto FrontEnd como BackEnd.<br> Experiencia en desarrollo de videojuegos 2D y 3D, aplicaciones de escritorio, navegador y dispositivos moviles. <br>A la hora de trabajara siempre busco un buen equilibrio y una buena usabilidad, para lograr así un resultado de calidad.</p>
+        <p class="text-center">Desarrollador de aplicaciones multiplataforma en formación, con conocimientos tanto FrontEnd como BackEnd.<br> Experiencia en desarrollo de videojuegos 2D y 3D, aplicaciones de escritorio, navegador y dispositivos moviles. <br>A la hora de trabajar siempre busco un buen equilibrio y una buena usabilidad, para lograr así un resultado de calidad.</p>
       </div>
       <div class="col-12 d-flex justify-content-center  align-items-center">
-        <div class="row justify-content-center  align-items-center">
+        <div class="row justify-content-center  align-items-center w-100">
           <h4 class="text-center titulo1">Skills</h4>
-          <div class="col-12">
-
+          <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+            <h5>Swift</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning w-75" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
