--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>PortfolioJaimeCasado</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark navbar-center" id ="navbar">
+  <nav class="navbar navbar-expand-sm navbar-dark navbar-center fixed-top " id ="navbar">
     <div class="container">
       <a href="#" class="navbar-brand">Jaime Casado</a>
 
@@ -43,12 +43,69 @@
       </div>
       <div class="col-12 d-flex justify-content-center  align-items-center">
         <div class="row justify-content-center  align-items-center w-100">
-          <h4 class="text-center titulo1">Skills</h4>
-          <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-            <h5>Swift</h5>
+          <h4 class="text-center titulo1 ">Skills</h4>
+          <div class="col-12"></div>
+          <div class=" col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>Java</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning w-50" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>MySql</h5>
             <div class="d-block w-100">
               <div class="progress">
                 <div class="progress-bar-animated progress-bar-striped bg-warning w-75" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>HTML</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning w-100" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>CSS</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning w-25" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>PHP</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning noob" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>JavaScript</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning noob" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>Swift</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning noob" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3 d-flex flex-column justify-content-center align-items-center skill">
+            <h5>Kotlin</h5>
+            <div class="d-block w-100">
+              <div class="progress">
+                <div class="progress-bar-animated progress-bar-striped bg-warning noob" role="progressbar"  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -57,8 +114,21 @@
       </div>
     </div>
 
-    <div class="row" id = "portfolio">
+    <div class="row justify-content-center  align-items-center w-100" id = "portfolio">
+      <h4 class="text-center titulo2" >Trabajos</h4>
+      <div class="col-12"></div>
+      <div class="col-12 col-md-6 col-lg-12">
 
+      </div>
+      <div class="col-12 col-md-6 col-lg-12">
+
+      </div>
+      <div class="col-12 col-md-6 col-lg-12">
+
+      </div>
+      <div class="col-12 col-md-6 col-lg-12">
+
+      </div>
     </div>
     <div class="row" id = "contact">
 
