Anadidas fotos de los trabajos

--- a/index.html
+++ b/index.html
@@ -117,17 +117,15 @@
     <div class="row justify-content-center  align-items-center w-100" id = "portfolio">
       <h4 class="text-center titulo2" >Trabajos</h4>
       <div class="col-12"></div>
-      <div class="col-12 col-md-6 col-lg-12">
 
+      <div class=" p-4 col-12 col-md-6 col-lg-12 d-flex flex-column justify-content-center align-items-center empawake">
+        <h5>EmpaWake</h5>
       </div>
-      <div class="col-12 col-md-6 col-lg-12">
-
+      <div class=" p-4 col-12 col-md-6 col-lg-12 d-flex flex-column justify-content-center align-items-center addictmetica">
+        <h5>Addictmetica</h5>
       </div>
-      <div class="col-12 col-md-6 col-lg-12">
-
-      </div>
-      <div class="col-12 col-md-6 col-lg-12">
-
+      <div class=" p-4 col-12 d-flex flex-column justify-content-center align-items-center retroworld">
+        <h5>RetroWorld</h5>
       </div>
     </div>
     <div class="row" id = "contact">
