terminada seccion portfolio

--- a/index.html
+++ b/index.html
@@ -119,17 +119,64 @@
       <div class="col-12"></div>
 
       <div class=" p-4 col-12 col-md-6 col-lg-12 d-flex flex-column justify-content-center align-items-center empawake">
-        <h5>EmpaWake</h5>
+        <h5 class="text-center font-weight-bolder">EmpaWake</h5>
+        <p class="text-center font-weight-bolder"><br>Proyecto desarrollado en Java con enlace a base de datos PHP y MySql, que tiene el objetivo de ayudar a las personas a mejor su empatia.<br>
+        Esto se logra a traves de un cuestionario, que dependiendo de las respuestas que eliga el usuario, le da un veredicto sobre el estado actual de su nivel de empatia
+        y de que aspectos deberia tener en cuenta para mejorar.</p>
       </div>
       <div class=" p-4 col-12 col-md-6 col-lg-12 d-flex flex-column justify-content-center align-items-center addictmetica">
-        <h5>Addictmetica</h5>
+        <h5 class="text-center font-weight-bolder">Addictmetica</h5>
+        <p class="text-center font-weight-bolder"><br>Juego educativo desarrollado en Scratch.<br>
+        El objetivo principal del juego es afianzar los conceptos de suma, resta y multiplicacion a traves de ladrillos descendentes con alguna de estas operaciones.<br>
+        Estos ladrillos deben ser resueltos antes de que toquen la parte inferior de la pantalla, y a cada uno que se resuelve se aumenta la velocidad a la que caen los ladrillos posteriores. </p>
       </div>
       <div class=" p-4 col-12 d-flex flex-column justify-content-center align-items-center retroworld">
-        <h5>RetroWorld</h5>
+        <h5 class="text-center font-weight-bolder">RetroWorld</h5>
+        <p class="text-center font-weight-bolder"><br>Pagina web que gira entorno al mundo de la retrocomputación.<br>
+        En ella puedes encontrar tanto informacion sobre los sistemas clasicos, tal como componentes y especificaciones tecnicas, e informacion sobre los juegos que puedes disfrutar para cada uno de ellos.</p>
       </div>
     </div>
-    <div class="row" id = "contact">
+    <div class="row justify-content-center  align-items-center w-100" id = "contact">
+      <div class="col-md-6 col-md-offset-3">
+              <div class="well well-sm">
+                <form class="form-horizontal" action="" method="post">
+                <fieldset>
+                  <legend class="text-center">Contact me</legend>
 
+
+                  <div class="form-group">
+                    <label class="col-md-3 control-label" for="name">Name</label>
+                    <div class="col-md-9">
+                      <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label class="col-md-3 control-label" for="email">Your E-mail</label>
+                    <div class="col-md-9">
+                      <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <label class="col-md-3 control-label" for="message">Your message</label>
+                    <div class="col-md-9">
+                      <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
+                    </div>
+                  </div>
+
+
+                  <div class="form-group">
+                    <div class="col-md-12 text-right">
+                      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                    </div>
+                  </div>
+                </fieldset>
+                </form>
+              </div>
+            </div>
     </div>
 
   </div>
